--- a/evalvictor.html
+++ b/evalvictor.html
@@ -24,8 +24,8 @@
 
     <main>
         <div class="text">
-            <h2 style="margin-left: 10%">Our Insights</h2>       <br>         
-            
+            <h2>Our Insights</h2>
+
             <p>Get all your financial questions answered with article from financial gourous</p>
         </div>
         <div class="buttonsbar">
@@ -36,21 +36,22 @@
             <button class="button2">Stocks</button>
             <button class="button2">Insurance</button>
         </div>
-        <div class="table">
-            <div class="cases">            
-            <button class="button3" id="insurance">Hard truth about insurance</button>
-            <button class="button3" id="equities">What are equities and how they can grow</button>
-            <button class="button3" id="angels">Angels and unicorn</button>
-            <button class="button3" id="investment">Investment options for tax saving under 80 C</button>
-            <button class="button3" id="superpower">Secret superpower of compuding</button>
-            <button class="button3" id="account">Money kept in account loses in value</button>
-            <button class="button3" id="estate">Real Estate</button>
-            </div>
-
-        </div>
-
-
     </main>
+
+
+    <div class="cases">
+        <button class="button3" id="insurance">Hard truth about insurance</button>
+        <button class="button3" id="equities">What are equities and how they can grow</button>
+        <button class="button3" id="angels">Angels and unicorn</button>
+        <button class="button3" id="investment">Investment options for tax saving under 80 C</button>
+        <button class="button3" id="superpower">Secret superpower of compuding</button>
+        <button class="button3" id="account">Money kept in account loses in value</button>
+        <button class="button3" id="estate">Real Estate</button>
+    </div>
+
+
+
+
 
     <footer>
 
